--- a/report.html
+++ b/report.html
@@ -27,13 +27,7 @@
 		<br>
 		<li><u>Alojamento da página utilizando Heroku</u></li>
 		<br>
-			<ul>
-				<p>Para que seja possível alojar a página foi necessário então criar conta numa plataforma que providencia alojamento em cloud gratuitamente ( <a href="https://www.heroku.com/what">Heroku</a> ). </p>
-				<p>Uma vez criada a conta, foi então efectuado o link entre esta mesma plataforma e o GitHub, local que vai alojar todos os ficheiros e imagens.</p>
-				<p>Após as configurações feitas podemos então por a nossa página online (Link acima identificado como Aula 1).</p>
-		</ul>
 		
-		<br>
 		<li><u>Compreensão da Internet e Rede </u></li>
 		<br>
 			<ul>
@@ -82,7 +76,7 @@
 							<img src="img/f12-2.jpg">
 						</center>
 						<br>
-						<li>Através da tab "Headers" podemos analisar informação detalhada do pedido feito ao servidor, consiste quase que como uma pergunta, ao qual o servidor depois envia a respectiva resposta</li>
+						<li>A tab "Headers"</li>
 						<br>
 						<center>
 							<img src="img/f12-3.jpg">
