--- a/report.html
+++ b/report.html
@@ -12,7 +12,7 @@
 	<meta charset="UTF-8">
     <h1> Report Lab 1 </h1>
     <p style="text-align: center">Durante a aula de laboratorio Aula 1 aprendemos os basicos para a criação e alojamento de uma página web.</i></i></p><i><i>
-    <h1> Relatótio de atividades </h1>
+    <h1> Relatótio </h1>
     <ol>
 		<br>
         <li><u>Criação da página</u></li>
