--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         <p><b><a href="lab1/index.html">Laboratório 1:</a></b> Conhecer a Internet com a minha primeira página Web</p>
         <p><b><a href="lab2/index.html">Laboratório 2:</a></b> Explorando o HTML com o meu primeiro website </p>
+        <p><b><a href="lab3/index.html">Laboratório 3:</a></b> Inclusão de formulários e imagens SVG no meu website </p>
         </center>
     </body>
 
