--- a/lab3/comentarios.html
+++ b/lab3/comentarios.html
@@ -88,7 +88,7 @@
             <textarea name="message" rows="5" cols="100">
             </textarea><br> <br>
 
-            <input type="image" src="images/setinhazul.png" alt="Submit" width="50" height="50"><br>
+            <input type="image" src="images/Setinhazul.png" alt="Submit" width="50" height="50"><br>
             <input type="submit" value="Submit">
 
             <input type="hidden" id="Laboratório3" name="Opinião sobre o laboratório 3" value="10000">
