--- a/lab3/comentarios.html
+++ b/lab3/comentarios.html
@@ -89,6 +89,7 @@
             </textarea><br> <br>
 
             <input type="image" src="images/Setinhazul.png" alt="Submit" width="50" height="50"><br>
+            <center><input type="image" src="images/Setinhazul.png" alt="Submit" width="50" height="50"></center>
             <input type="submit" value="Submit">
 
             <input type="hidden" id="Laboratório3" name="Opinião sobre o laboratório 3" value="10000">
