--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <p><b><a href="lab1/index.html">Laboratório 1:</a></b> Conhecer a Internet com a minha primeira página Web</p>
         <p><b><a href="lab2/index.html">Laboratório 2:</a></b> Explorando o HTML com o meu primeiro website </p>
         <p><b><a href="lab3/index.html">Laboratório 3:</a></b> Inclusão de formulários e imagens SVG no meu website </p>
+        <p><b><a href="lab4/index.html">Laboratório 4:</a></b> Integração de elementos semânticos HTML5 no meu website e estilização com seletores e propriedades CSS </p>
         </center>
     </body>
 
