--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <p><b><a href="lab2/index.html">Laboratório 2:</a></b> Explorando o HTML com o meu primeiro website </p>
         <p><b><a href="lab3/index.html">Laboratório 3:</a></b> Inclusão de formulários e imagens SVG no meu website </p>
         <p><b><a href="lab4/index.html">Laboratório 4:</a></b> Integração de elementos semânticos HTML5 no meu website e estilização com seletores e propriedades CSS </p>
+        <p><b><a href="lab5/index.html">Laboratório 5:</a></b> Website responsivo e dinâmico </p>
         </center>
     </body>
 
